NKP/eea-deployer/talos/0307/helm/prometheus/traefik-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-prometheus-ingressroute
  namespace: monitoring
#  annotations: 
#    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana-dev.eea.europa.eu.lc`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80

    # Optionally you can add prometheus and alertmanager ingress routes
    - match: Host(`prometheus-dev.eea.europa.eu.lc`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090

    - match: Host(`alertmanager-dev.eea.europa.eu.lc`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-alertmanager
          port: 9093

  tls:
#    certResolver: letsencrypt  # If you're using cert-manager or Traefik's built-in cert resolver
